--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
 
 #welcome {
     position: absolute;
-    overflow: hidden;
     height: 800px;
     color: #FFFFFF;
     left: 0;
@@ -37,7 +36,7 @@ h1 {
 #name {
     font-size: 30px;
     line-height: 1.2;
-    font-family: cursive;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 h2 {
@@ -75,28 +74,25 @@ p {
 }
 
 .menu {
-    list-style: none;
-    font-family: sans-serif;
-    position: absolute;
-    top: 10px;
-    right: 30px;
+    position: fixed;
+    background: white;
+    width: 100%;
+    margin-top: 0px;
+    top: 0px;
     z-index: 10;
-    cursor: pointer;
 }
 
 .links {
-    float: left;
-    color: #fff;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    padding-bottom: 5px;
+    display: inline;
+    padding-left: 33px;
+    padding-right: 25px;
     font-family: fantasy;
     font-size: 20px
 }
 
 .links:hover {
-    background-color: dodgerblue;
+    font-size: 25px;
+    text-decoration: underline;
 }
 
 html {
@@ -105,8 +101,33 @@ html {
 
 a {
     text-decoration: none;
+    color: crimson;
+    text-shadow: 2px 2px gainsboro;
 }
 
 .article:hover {
     color: fuchsia;
+}
+
+#writings a {
+    text-shadow: none !important;
+    text-decoration: underline !important;
+    color: blue !important;
+}
+
+#contacts {
+    background: firebrick;
+}
+
+#contacts iframe {
+    width: 100%;
+}
+
+.contact_1 h3 {
+    display: inline;
+}
+
+.contact_1 a {
+    color: white;
+    text-shadow: none;
 }
